fix : dbf import value